--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
    "license": "ISC",
    "dependencies": {
       "bcrypt": "^5.1.1",
+      "chromedriver": "^137.0.3",
       "dayjs": "^1.11.13",
       "dotenv": "^16.4.7",
       "ejs": "^3.1.10",
@@ -24,7 +25,9 @@
       "luxon": "^3.5.0",
       "mysql2": "^3.13.0",
       "nodemailer": "^7.0.3",
-      "sequelize": "^6.37.6"
+      "selenium-webdriver": "^4.33.0",
+      "sequelize": "^6.37.6",
+      "webdriver-manager": "^12.1.9"
    },
    "devDependencies": {
       "nodemon": "^3.1.9"
